# cpu-model

./: .gitignore  DEVICE_SPECS.md  Makefile  PLAN.md  README.md  TODO.md  benchmark_intel_hardware.py  data_pipeline_config.json  intel_data_pipeline.py  intel_memory_optimization.json  intel_memory_optimizer.py  intel_model_performance.json  intel_optimized_chat.py  main.py  pyproject.toml  requirements.txt  setup.py  test_intel_setup.py
conversations/: conversation_434fb11a-bb2d-41f5-b917-70920f3bf1f0_20250707_085251.json  conversation_e9f6cd23-eb31-479b-9c1b-f3cd664891e7_20250707_081352.json
demo_training_output/: training_report.json
docs/: benchmark_analysis.md
evaluation_results/: comprehensive_evaluation.json
results/: intel_model_performance.json
results/evaluation_results/: comprehensive_evaluation.json
scripts/: benchmark_intel_hardware.py
src/: __init__.py  intel_chat_system.py  intel_data_pipeline.py  intel_memory_optimizer.py  intel_model_evaluator.py  intel_optimized_model.py  intel_training_loop.py
